src/main/java/fr/univorleans/mssl/Parser/msslParser.java
// Generated from java-escape by ANTLR 4.11.1
package fr.univorleans.mssl.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class msslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER=1, BOOLEAN=2, Int=3, Bool=4, Unit=5, EQ=6, SEMIC=7, COMMA=8, COLON=9, 
		LBRACE=10, RBRACE=11, LPAR=12, RPAR=13, LT=14, GT=15, DoubleQuote=16, 
		Sub=17, PLUS=18, FN=19, MAIN=20, LET=21, MUT=22, Box=23, Trc=24, Sig=25, 
		Emit=26, When=27, Watch=28, Clone=29, Spawn=30, Cooperate=31, PRINT=32, 
		Mul=33, Ref=34, Dot=35, IF=36, ELSE=37, OPERATOR=38, IDENTIFIER=39, VALID_ID_START=40, 
		VALID_ID_CHAR=41, WS=42, OC_COMMENT=43, SL_COMMENT=44;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_params = 2, RULE_signals = 3, 
		RULE_signature = 4, RULE_expr = 5, RULE_type_expression = 6, RULE_block = 7, 
		RULE_instructions = 8, RULE_instruction = 9, RULE_declVar = 10, RULE_value = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "params", "signals", "signature", "expr", "type_expression", 
			"block", "instructions", "instruction", "declVar", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'int'", "'bool'", "'unit'", "'='", "';'", "','", "':'", 
			"'{'", "'}'", "'('", "')'", "'<'", "'>'", "'\"'", "'-'", "'+'", "'fn'", 
			"'main'", "'let'", "'mut'", "'box'", "'trc'", "'Sig'", "'emit'", "'when'", 
			"'watch'", "'clone'", "'spawn'", "'cooperate'", "'print!'", "'*'", "'&'", 
			"'.'", "'if'", "'else'", "'=='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTEGER", "BOOLEAN", "Int", "Bool", "Unit", "EQ", "SEMIC", "COMMA", 
			"COLON", "LBRACE", "RBRACE", "LPAR", "RPAR", "LT", "GT", "DoubleQuote", 
			"Sub", "PLUS", "FN", "MAIN", "LET", "MUT", "Box", "Trc", "Sig", "Emit", 
			"When", "Watch", "Clone", "Spawn", "Cooperate", "PRINT", "Mul", "Ref", 
			"Dot", "IF", "ELSE", "OPERATOR", "IDENTIFIER", "VALID_ID_START", "VALID_ID_CHAR", 
			"WS", "OC_COMMENT", "SL_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public msslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ProgramContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(msslParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FN) {
				{
				{
				setState(24);
				declaration();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30);
			block();
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Declaration_functionContext extends DeclarationContext {
		public TerminalNode FN() { return getToken(msslParser.FN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(msslParser.IDENTIFIER, 0); }
		public TerminalNode LPAR() { return getToken(msslParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(msslParser.RPAR, 0); }
		public TerminalNode Sub() { return getToken(msslParser.Sub, 0); }
		public TerminalNode GT() { return getToken(msslParser.GT, 0); }
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public SignalsContext signals() {
			return getRuleContext(SignalsContext.class,0);
		}
		public Declaration_functionContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitDeclaration_function(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			_localctx = new Declaration_functionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(FN);
			setState(34);
			match(IDENTIFIER);
			setState(35);
			match(LPAR);
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MUT) {
				{
				setState(36);
				params();
				}
			}

			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMIC) {
				{
				setState(39);
				signals();
				}
			}

			setState(42);
			match(RPAR);
			setState(43);
			match(Sub);
			setState(44);
			match(GT);
			setState(45);
			signature();
			setState(46);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	 
		public ParamsContext() { }
		public void copyFrom(ParamsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParamsFuncContext extends ParamsContext {
		public List<TerminalNode> MUT() { return getTokens(msslParser.MUT); }
		public TerminalNode MUT(int i) {
			return getToken(msslParser.MUT, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(msslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(msslParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COLON() { return getTokens(msslParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(msslParser.COLON, i);
		}
		public List<SignatureContext> signature() {
			return getRuleContexts(SignatureContext.class);
		}
		public SignatureContext signature(int i) {
			return getRuleContext(SignatureContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(msslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(msslParser.COMMA, i);
		}
		public ParamsFuncContext(ParamsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitParamsFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_params);
		int _la;
		try {
			_localctx = new ParamsFuncContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(MUT);
			setState(49);
			match(IDENTIFIER);
			setState(50);
			match(COLON);
			setState(51);
			signature();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(52);
				match(COMMA);
				setState(53);
				match(MUT);
				setState(54);
				match(IDENTIFIER);
				setState(55);
				match(COLON);
				setState(56);
				signature();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SignalsContext extends ParserRuleContext {
		public SignalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signals; }
	 
		public SignalsContext() { }
		public void copyFrom(SignalsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SignalsFuncContext extends SignalsContext {
		public TerminalNode SEMIC() { return getToken(msslParser.SEMIC, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(msslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(msslParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(msslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(msslParser.COMMA, i);
		}
		public SignalsFuncContext(SignalsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitSignalsFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignalsContext signals() throws RecognitionException {
		SignalsContext _localctx = new SignalsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_signals);
		int _la;
		try {
			_localctx = new SignalsFuncContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(62);
			match(SEMIC);
			setState(63);
			match(IDENTIFIER);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(64);
				match(COMMA);
				setState(65);
				match(IDENTIFIER);
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SignatureContext extends ParserRuleContext {
		public SignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signature; }
	 
		public SignatureContext() { }
		public void copyFrom(SignatureContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SigUnitContext extends SignatureContext {
		public TerminalNode Unit() { return getToken(msslParser.Unit, 0); }
		public SigUnitContext(SignatureContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitSigUnit(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SigBoxContext extends SignatureContext {
		public TerminalNode Box() { return getToken(msslParser.Box, 0); }
		public TerminalNode LT() { return getToken(msslParser.LT, 0); }
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public TerminalNode GT() { return getToken(msslParser.GT, 0); }
		public SigBoxContext(SignatureContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitSigBox(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SigBoolContext extends SignatureContext {
		public TerminalNode Bool() { return getToken(msslParser.Bool, 0); }
		public SigBoolContext(SignatureContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitSigBool(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SigIntContext extends SignatureContext {
		public TerminalNode Int() { return getToken(msslParser.Int, 0); }
		public SigIntContext(SignatureContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitSigInt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SigCloneContext extends SignatureContext {
		public TerminalNode Clone() { return getToken(msslParser.Clone, 0); }
		public TerminalNode LT() { return getToken(msslParser.LT, 0); }
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public TerminalNode GT() { return getToken(msslParser.GT, 0); }
		public SigCloneContext(SignatureContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitSigClone(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SigTrcContext extends SignatureContext {
		public TerminalNode Trc() { return getToken(msslParser.Trc, 0); }
		public TerminalNode LT() { return getToken(msslParser.LT, 0); }
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public TerminalNode GT() { return getToken(msslParser.GT, 0); }
		public SigTrcContext(SignatureContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitSigTrc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignatureContext signature() throws RecognitionException {
		SignatureContext _localctx = new SignatureContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_signature);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Unit:
				_localctx = new SigUnitContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(Unit);
				}
				break;
			case Int:
				_localctx = new SigIntContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(Int);
				}
				break;
			case Bool:
				_localctx = new SigBoolContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				match(Bool);
				}
				break;
			case Box:
				_localctx = new SigBoxContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				match(Box);
				setState(75);
				match(LT);
				setState(76);
				signature();
				setState(77);
				match(GT);
				}
				break;
			case Trc:
				_localctx = new SigTrcContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				match(Trc);
				setState(80);
				match(LT);
				setState(81);
				signature();
				setState(82);
				match(GT);
				}
				break;
			case Clone:
				_localctx = new SigCloneContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(84);
				match(Clone);
				setState(85);
				match(LT);
				setState(86);
				signature();
				setState(87);
				match(GT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpBlockContext extends ExprContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExpBlockContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpCooperateContext extends ExprContext {
		public TerminalNode Cooperate() { return getToken(msslParser.Cooperate, 0); }
		public ExpCooperateContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpCooperate(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpBoxContext extends ExprContext {
		public TerminalNode Box() { return getToken(msslParser.Box, 0); }
		public TerminalNode LPAR() { return getToken(msslParser.LPAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(msslParser.RPAR, 0); }
		public ExpBoxContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpBox(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpConditionalsContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OPERATOR() { return getToken(msslParser.OPERATOR, 0); }
		public ExpConditionalsContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpConditionals(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpTrcContext extends ExprContext {
		public TerminalNode Trc() { return getToken(msslParser.Trc, 0); }
		public TerminalNode LPAR() { return getToken(msslParser.LPAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(msslParser.RPAR, 0); }
		public ExpTrcContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpTrc(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpInvokeContext extends ExprContext {
		public TerminalNode Spawn() { return getToken(msslParser.Spawn, 0); }
		public List<TerminalNode> LPAR() { return getTokens(msslParser.LPAR); }
		public TerminalNode LPAR(int i) {
			return getToken(msslParser.LPAR, i);
		}
		public TerminalNode IDENTIFIER() { return getToken(msslParser.IDENTIFIER, 0); }
		public List<TerminalNode> RPAR() { return getTokens(msslParser.RPAR); }
		public TerminalNode RPAR(int i) {
			return getToken(msslParser.RPAR, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SignalsContext signals() {
			return getRuleContext(SignalsContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(msslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(msslParser.COMMA, i);
		}
		public ExpInvokeContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpInvoke(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpIndexContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Dot() { return getToken(msslParser.Dot, 0); }
		public TerminalNode INTEGER() { return getToken(msslParser.INTEGER, 0); }
		public ExpIndexContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpIndex(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpPrintContext extends ExprContext {
		public TerminalNode PRINT() { return getToken(msslParser.PRINT, 0); }
		public TerminalNode LPAR() { return getToken(msslParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(msslParser.RPAR, 0); }
		public List<TerminalNode> DoubleQuote() { return getTokens(msslParser.DoubleQuote); }
		public TerminalNode DoubleQuote(int i) {
			return getToken(msslParser.DoubleQuote, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(msslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(msslParser.IDENTIFIER, i);
		}
		public List<TerminalNode> PLUS() { return getTokens(msslParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(msslParser.PLUS, i);
		}
		public List<TerminalNode> Mul() { return getTokens(msslParser.Mul); }
		public TerminalNode Mul(int i) {
			return getToken(msslParser.Mul, i);
		}
		public ExpPrintContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpPrint(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpValContext extends ExprContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ExpValContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpVal(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpMutableRefContext extends ExprContext {
		public TerminalNode Ref() { return getToken(msslParser.Ref, 0); }
		public TerminalNode MUT() { return getToken(msslParser.MUT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExpMutableRefContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpMutableRef(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpSharedRefContext extends ExprContext {
		public TerminalNode Ref() { return getToken(msslParser.Ref, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExpSharedRefContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof msslVisitor ) return ((msslVisitor<? extends T>)visitor).visitExpSharedRef(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpTupleContext extends ExprContext {
		public TerminalNode LPAR() { return getToken(msslParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(msslParser.RPAR, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(msslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(msslParser.COMMA, i);
		}
		public ExpTupleContext(ExprContext ctx) { copyFrom(ctx); }
